# experiments

./: CMakeLists.txt  README.md
bin_to_char_conversion/: README.md  test.cpp
cache_aliasing/: README.md  test.cpp
cache_usage/: README.md  plot_histograms.py  test.cpp
cache_usage/include/: common.hpp  fenwick_trees.hpp  node64.hpp  segment_trees.hpp
cache_usage/results/: ft_blocked_64_holes_results.txt  ft_blocked_64_results.txt  ft_holes_results.txt  ft_results.txt  st_bu_results.txt  st_td_results.txt
fibonacci_search/: test.cpp
integer_search_for_strings/: README.md  test.cpp
integer_search_for_strings/include/: fixed_string_pool.hpp  front_coded_dictionary.hpp  integer_prefix_lower_bound.hpp  prefix_indexed_front_coded_dictionary.hpp  prefix_indexed_string_pool.hpp  prefix_indexed_string_pool_v2.hpp  prefix_indexed_string_pool_v3.hpp  string_pool.hpp  util.hpp
memmove/: README.md  plot_timings.py  test.cpp
memmove/include/: sorted_vector.hpp
memmove/results/: results.txt
